# n_body

./: CMakeLists.txt  CMakeSettings.json  N_body_report.docx  README.md
ver0/: GSimulation.cpp  GSimulation.hpp  cpu_time.hpp  main.cpp  types.hpp
ver1/: GSimulation.cpp  GSimulation.hpp  types.hpp
ver2/: CMakeLists.txt  GSimulation.cpp  Particle.hpp
